{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 130,
  "lineage": "5e902f57-7493-1050-58c1-636f351d3664",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gh-8080-firewall-jenkins",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-06-23T07:18:11.391-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "gh-8080-firewall-jenkins",
            "name": "gh-8080-firewall-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/prismatic-iris-243515/global/networks/default",
            "priority": 1000,
            "project": "prismatic-iris-243515",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prismatic-iris-243515/global/firewalls/gh-8080-firewall-jenkins",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jenkins"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gh-9564-firewall-externalssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-06-23T07:18:11.579-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "gh-9564-firewall-externalssh",
            "name": "gh-9564-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/prismatic-iris-243515/global/networks/default",
            "priority": 1000,
            "project": "prismatic-iris-243515",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prismatic-iris-243515/global/firewalls/gh-9564-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jenkins"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20190617",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/prismatic-iris-243515/zones/asia-south1-a/disks/mstakx-jenkins"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "id": "mstakx-jenkins",
            "instance_id": "2256947085089846446",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDCWy4NnD1LFtqMSmj6VC35HdRmB/1ph9c15x1mHKh9kY2m8DehCfy04vF6GMSKNgEdTWouAY6wSWG8qTdqkWHHwZw8Bz5KLD7V5ME4jcyqZxOR7YC+mW+8MwfuOwgjho9EbWBrqu3Y/lnQmzJjEU6tWaScWtoq/ELnSOk2+OvWJaD9xpwWI8SM3iqj5ecM3KhTMTLKEdGzga8kK7fKWeYCKCNETF7o1ygxIP6NCH5tjz4OUyPw6IjRbCenNKzQLLqaWkGi3tqAUyF+14MpcvMD974YH0BPRtqpDziyWTQ78Px+ZkSv+s48VHJ2nBDXnC9wW2p0phP1CnZgfJ0BfIPX chandrasekarsrin\n"
            },
            "metadata_fingerprint": "RlHB379yrEw=",
            "name": "mstakx-jenkins",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.124.33",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prismatic-iris-243515/global/networks/default",
                "network_ip": "10.160.0.49",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prismatic-iris-243515/regions/asia-south1/subnetworks/default",
                "subnetwork_project": "prismatic-iris-243515"
              }
            ],
            "project": "prismatic-iris-243515",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prismatic-iris-243515/zones/asia-south1-a/instances/mstakx-jenkins",
            "service_account": [
              {
                "email": "383243337981-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "tags": [
              "jenkins"
            ],
            "tags_fingerprint": "4l7--0t2PzY=",
            "zone": "asia-south1-a"
          },
          "depends_on": [
            "google_compute_firewall.gh-9564-firewall-externalssh"
          ]
        }
      ]
    }
  ]
}